# OpenConstructionERP

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AGENT_START.md  CHANGELOG.md  CONTRIBUTORS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml
.devcontainer/: SETUP.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: authors-guard.yml  ci.yml  cla.yml  desktop-release.yml  eval-match.yml  module-captures.yml  pypi-publish.yml  release.yml  repo-hygiene.yml
backend/: README.md  probe_rank.py  pyproject.toml
backend/alembic/versions/: b2f4e1a3c907_gate_result_score_to_float.py  v281_match_project_settings.py  v2940_assemblies_resource_type.py  v2a0_compliance_dsl_rules.py  v3011_subcontractors.py  v3018_property_dev.py  v3021_schedule_advanced.py  v3028_portal_email_optin.py  v3034_match_pipeline_stages.py  v3037_pipelines.py  v3042_clash_selection_sets.py  v3046_clash_run_config.py  (+48 more)
backend/app/: cli.py  cli_static.py  config.py  database.py  dependencies.py  main.py  schemas.py
backend/scripts/: _inspect_group.py  _probe_projects.py  import_crm_priority.py  migrate_bim_to_s3.py  seed_cwicr_v3.py  translate_cwicr_columns.py  v3_snapshot_load.py
backend/tests/: conftest.py
data/bim_rules/: room_naming_convention.yaml
deploy/docker/: Dockerfile.backend  Dockerfile.unified  README.md  entrypoint.sh  nginx.conf
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: US_COST_DATABASE_BATCH2.md  US_COST_DATABASE_METHODOLOGY.md  US_COST_DATABASE_PILOT.md  cost-database-import.md  docs.html  expand_docs2.py
docs/adr/: 003-vector-match-service.md
docs/desktop/: INSTALL.md  MACOS_NOTARIZATION.md
docs/rfc/: 11-dwg-selection.md  19-bim-viewer-controls.md  34-oce-global-spec-integration.md  35-eac-v2-platform.md  36-eac-wave1-simplified.md
frontend/: index.html  package-lock.json  package.json  playwright.assets-audit.config.ts  tailwind.config.js  vite.config.ts
frontend/qa-tests/: ux-acceptance.mjs
frontend/src/: index.css
marketing-site/: button-lab.html  contact.html  demo-register.html  docs.html  download-module-variants.html  download.html  index.html  industries.html  license-request.html  llms.txt  news.html  partners.html  services.html  standards.html
marketing-site/locales/: ar.json  bg.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  tr.json  zh.json
marketing-site/news/: open-erp-own-your-stack.html  v3-0-0.html  v3-11-0.html  v3-6-0.html  v4-0-0.html  v5-0-0.html  v5-1-0.html  v5-2-0.html  v5-2-2.html  v5-2-3.html  v5-2-5.html  v5-2-6.html  v5-2-7.html  v5-2-8.html  v5-3-0.html  v5-5-0.html  v6-10-0.html  v7-0-0.html  v7-0-1.html  v7-1-0.html  v7-10-0.html  v7-3-0.html  v7-5-0.html  v7-6-0.html  v7-9-0.html  v8-1-0.html  v8-2-0.html  v8-3-0.html  v8-4-0.html  v8-5-0.html  v8-6-0.html  v8-7-0.html  v8-7-1.html  v8-8-0.html  v8-8-1.html  v8-8-2.html
packs/china-gbt50500/: pyproject.toml
packs/china-gbt50500/src/openconstructionerp_china_gbt50500/: __init__.py  manifest.py
packs/mexico-mx/: README.md  pyproject.toml
packs/mexico-mx/src/openconstructionerp_mexico_mx/: __init__.py  manifest.py  onboarding.yaml
packs/mexico-mx/src/openconstructionerp_mexico_mx/locales/: es-MX.json
packs/mexico-mx/src/openconstructionerp_mexico_mx/rule_packs/: apu_precios_unitarios.json  imss_nom_seguridad.json  iva_retenciones_cfdi.json  lopsrm_obra_publica.json  vivienda_social_infonavit.json
scripts/: backfill_support_onboarding_mod.py  build_enriched_snapshot.py  build_mn_locale.py  check_no_brand_tokens.py  check_repo_hygiene.py
signatures/: cla.json
website-marketing/: index.html
(+2596 files in other folders)
